--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,11 @@ uvicorn>=0.24.0
 # Utilities
 python-dateutil>=2.8.2
 
-# Optional: LLM Integration
-# openai>=1.0.0
-# anthropic>=0.7.0
+# LLM Integration
+openai>=1.0.0
+
+# Environment Variables (Optional - for .env file support)
+python-dotenv>=1.0.0
 
 # Testing
 pytest>=7.4.0
